# AdventOfCode

./: .gitignore  .gitmodules
2018/1/1/: main.cpp
2018/1/2/: main.cpp
2018/2/1/: main.cpp
2018/2/2/: main.cpp
2018/3/1/: main.cpp
2018/3/2/: Makefile  main.cpp
2018/4/1/: Makefile  main.cpp
2021/day-01/src/: main.rs
2021/day-02/src/: main.rs
2021/day-03/: main.py
2021/day-03/src/: main.rs
2021/problem_1-1/: Cargo.toml
2021/problem_1-1/src/: main.rs
2021/problem_1-2/: Cargo.toml
2021/problem_1-2/src/: main.rs
2021/problem_2-1/: Cargo.toml
2021/problem_2-1/src/: main.rs
2021/problem_2-2/: Cargo.toml
2021/problem_2-2/src/: main.rs
2022/: .clang-format  .clang-tidy  .cmake-format.yaml  .hadolint.yaml  CMakeLists.txt
2022/.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
2022/CMake/: AOC.cmake  Dependencies.cmake
2022/Challenges/: CMakeLists.txt  Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp  Day08.hpp  Day09.hpp  Utils.hpp
2022/Tests/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp
2022/Tests/Input/: Day07.txt
2023/: pylintrc
2023/1/: 1.py  2.py
2023/2/: 1.py  2.py
2023/3/: 1.py  2.py
2023/4/: 1.py  2.py
2023/5/: 1.py
2025/1/: test_1.py
2025/2/: test_2.py
2025/3/: test_3.py
2025/4/: test_4.py
2025/5/: test_5.py
2025/6/: test_6.py
